--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
-	base = a04a2b411
-	trimbase = 
+	base = 1ca636719
+	trimbase = a04a2b411
 	parent = upstream
 	previous = d4c0886c3
