--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
 	base = b8bc9823a
-	trimbase = c0a97e7ed
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
