--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
-	base = 2e9c6b4e9
-	trimbase = 
+	base = 6db4e81cd
+	trimbase = 2e9c6b4e9
 	parent = upstream
 	previous = d4c0886c3
