--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
 	base = 98ca4e146
-	trimbase = 96cb6684c
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
