--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	base = 396d2aa91
-	trimbase = 
+	base = 01dc5f936
+	trimbase = 396d2aa91
 	parent = upstream
 	previous = d4c0886c3
