--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = bb965c3b9
 	base = 54410a55b
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 8e3b66f5e
+	trimbase = 
