--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
-	base = 75b6ab919
-	trimbase = 
+	base = 7815da5eb
+	trimbase = 75b6ab919
 	parent = upstream
 	previous = d4c0886c3
