--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
 	base = ba8d497d5
-	trimbase = 97a806322
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
