--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
-	base = fe5615ab4
-	trimbase = 
+	base = 876036620
+	trimbase = fe5615ab4
 	parent = upstream
 	previous = d4c0886c3
