--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = bb965c3b9
 	base = 3261b7e56
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = bb6b7d795
+	trimbase = 
