--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d4c0886c3
-	base = fe9bb9cd3
+	base = f0a1c1d98
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = fe9bb9cd3
