--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
 	base = 8360e8e62
-	trimbase = 74f169166
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
