--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
-	base = 539464b97
-	trimbase = 
+	base = 97a3e435b
+	trimbase = 539464b97
 	parent = upstream
 	previous = d4c0886c3
