--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = bc3a8ef86
-	trimbase = aca2c5e0f
+	trimbase = 
 	parent = upstream
 	previous = bb965c3b9
