--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
-	base = ab2a7c72d
-	trimbase = 
+	base = cb3ee2217
+	trimbase = ab2a7c72d
 	parent = upstream
 	previous = d4c0886c3
