--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = 836bebee1
-	trimbase = 
+	base = f6b51af7a
+	trimbase = 836bebee1
 	parent = upstream
 	previous = d4c0886c3
