--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = bf0a59a56
-	trimbase = 
+	base = 7088ae52b
+	trimbase = bf0a59a56
 	parent = upstream
 	previous = d4c0886c3
